Update Listing setzt nun richtiges Material